created intro and product

--- a/index.html
+++ b/index.html
@@ -108,8 +108,318 @@
       <section class="intro">
         <div class="container">
           <div class="intro__list">
-            <div class="intro__item"></div>
-            <div class="intro__item"></div>
+            <div class="intro__item intro__item-left">
+              <div class="intro__inner intro__inner-left">
+                <h3 class="intro__inner-title">Future Vehicles</h3>
+                <span class="intro__inner-desc">
+                  See Honda innovation at its finest in out lineup of new
+                  vehicle models and future cars. Check back after what vehicles
+                  are up and coming from Honda.
+                </span>
+                <a href="#" class="btn">Go</a>
+              </div>
+            </div>
+            <div class="intro__item intro__item-right">
+              <div class="intro__inner intro__inner-right">
+                <span class="intro__inner-heading">BUILD & PRICE</span>
+                <h3 class="intro__inner-title">
+                  Personalize a 2018 ACCORD SEDAN to make it your own.
+                </h3>
+
+                <a href="#" class="btn-border">BUILD MY PRICE</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="product">
+        <h2 class="product__heading">Our Vehicles</h2>
+        <div class="container">
+          <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+            <li class="nav-item" role="presentation">
+              <a
+                class="nav-link active"
+                id="pills-cars-tab"
+                data-toggle="pill"
+                href="#pills-cars"
+                role="tab"
+                aria-controls="pills-cars"
+                aria-selected="true"
+                >CARS</a
+              >
+            </li>
+            <li class="nav-item" role="presentation">
+              <a
+                class="nav-link"
+                id="pills-crossover-tab"
+                data-toggle="pill"
+                href="#pills-crossover"
+                role="tab"
+                aria-controls="pills-crossover"
+                aria-selected="false"
+                >CROSSOVER & SUV</a
+              >
+            </li>
+            <li class="nav-item" role="presentation">
+              <a
+                class="nav-link"
+                id="pills-minivan-tab"
+                data-toggle="pill"
+                href="#pills-minivan"
+                role="tab"
+                aria-controls="pills-minivan"
+                aria-selected="false"
+                >MINIVAN & TRUCK</a
+              >
+            </li>
+            <li class="nav-item" role="presentation">
+              <a
+                class="nav-link"
+                id="pills-environmental-tab"
+                data-toggle="pill"
+                href="#pills-environmental"
+                role="tab"
+                aria-controls="pills-environmental"
+                aria-selected="false"
+                >ENVIRONMENTAL</a
+              >
+            </li>
+            <li class="nav-item" role="presentation">
+              <a
+                class="nav-link"
+                id="pills-future-tab"
+                data-toggle="pill"
+                href="#pills-future"
+                role="tab"
+                aria-controls="pills-future"
+                aria-selected="false"
+                >FUTURE</a
+              >
+            </li>
+          </ul>
+        </div>
+
+        <div class="tab-content" id="pills-tabContent">
+          <div
+            class="tab-pane fade show active"
+            id="pills-cars"
+            role="tabpanel"
+            aria-labelledby="pills-cars-tab"
+          >
+            <img src="./image/slider-1.jpg" alt="" />
+            <div class="container product__content">
+              <h3 class="product__content-heading">
+                <strong>CAR 1</strong>/12
+              </h3>
+              <img
+                src="./image/civic-logo.jpg"
+                alt=""
+                class="product__content-logo"
+              />
+              <span class="product__content-desc">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Exercitationem assumenda esse nisi maiores cum eius laborum,
+                quas optio velit praesentium nam, ipsum dolore a, totam quam
+                quasi consequatur. Placeat, iusto!
+              </span>
+              <div class="product__content-detail">
+                <div class="product__content-price">
+                  <p>$23,999</p>
+                  <strong>STARTING MSRP</strong>
+                </div>
+                <div class="product__content-parameter">
+                  <p>38/30</p>
+                  <strong>HWY/CITY RATNG</strong>
+                </div>
+              </div>
+              <div class="product__content-button">
+                <a href="#" class="product__content-explore btn">EXPLORE</a>
+                <a href="#" class="product__content-build btn-border">BUILD</a>
+              </div>
+              <div class="product__content-bottom">
+                <a href="#" class="product__content-link"
+                  >EXPLORE THE ACCORD FAMILY <i class="fa fa-angle-right"></i
+                ></a>
+                <img src="./image/accord-family-vehicles-2x.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div
+            class="tab-pane fade show active"
+            id="pills-crossover"
+            role="tabpanel"
+            aria-labelledby="pills-crossover-tab"
+          >
+            <img src="./image/slider-2.jpg" alt="" />
+            <div class="container product__content">
+              <h3 class="product__content-heading">
+                <strong>CAR 2</strong>/12
+              </h3>
+              <img
+                src="./image/civic-logo.jpg"
+                alt=""
+                class="product__content-logo"
+              />
+              <span class="product__content-desc">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Exercitationem assumenda esse nisi maiores cum eius laborum,
+                quas optio velit praesentium nam, ipsum dolore a, totam quam
+                quasi consequatur. Placeat, iusto!
+              </span>
+              <div class="product__content-detail">
+                <div class="product__content-price">
+                  <p>$23,999</p>
+                  <strong>STARTING MSRP</strong>
+                </div>
+                <div class="product__content-parameter">
+                  <p>38/30</p>
+                  <strong>HWY/CITY RATNG</strong>
+                </div>
+              </div>
+              <div class="product__content-button">
+                <a href="#" class="product__content-explore btn">EXPLORE</a>
+                <a href="#" class="product__content-build btn-border">BUILD</a>
+              </div>
+              <div class="product__content-bottom">
+                <a href="#" class="product__content-link"
+                  >EXPLORE THE ACCORD FAMILY <i class="fa fa-angle-right"></i
+                ></a>
+                <img src="./image/accord-family-vehicles-2x.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div
+            class="tab-pane fade show active"
+            id="pills-minivan"
+            role="tabpanel"
+            aria-labelledby="pills-minivan-tab"
+          >
+            <img src="./image/slider-3.jpg" alt="" />
+            <div class="container product__content">
+              <h3 class="product__content-heading">
+                <strong>CAR 3</strong>/12
+              </h3>
+              <img
+                src="./image/civic-logo.jpg"
+                alt=""
+                class="product__content-logo"
+              />
+              <span class="product__content-desc">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Exercitationem assumenda esse nisi maiores cum eius laborum,
+                quas optio velit praesentium nam, ipsum dolore a, totam quam
+                quasi consequatur. Placeat, iusto!
+              </span>
+              <div class="product__content-detail">
+                <div class="product__content-price">
+                  <p>$23,999</p>
+                  <strong>STARTING MSRP</strong>
+                </div>
+                <div class="product__content-parameter">
+                  <p>38/30</p>
+                  <strong>HWY/CITY RATNG</strong>
+                </div>
+              </div>
+              <div class="product__content-button">
+                <a href="#" class="product__content-explore btn">EXPLORE</a>
+                <a href="#" class="product__content-build btn-border">BUILD</a>
+              </div>
+              <div class="product__content-bottom">
+                <a href="#" class="product__content-link"
+                  >EXPLORE THE ACCORD FAMILY <i class="fa fa-angle-right"></i
+                ></a>
+                <img src="./image/accord-family-vehicles-2x.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div
+            class="tab-pane fade show active"
+            id="pills-environmental"
+            role="tabpanel"
+            aria-labelledby="pills-environmental-tab"
+          >
+            <img src="./image/slider-4.jpg" alt="" />
+            <div class="container product__content">
+              <h3 class="product__content-heading">
+                <strong>CAR 4</strong>/12
+              </h3>
+              <img
+                src="./image/civic-logo.jpg"
+                alt=""
+                class="product__content-logo"
+              />
+              <span class="product__content-desc">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Exercitationem assumenda esse nisi maiores cum eius laborum,
+                quas optio velit praesentium nam, ipsum dolore a, totam quam
+                quasi consequatur. Placeat, iusto!
+              </span>
+              <div class="product__content-detail">
+                <div class="product__content-price">
+                  <p>$23,999</p>
+                  <strong>STARTING MSRP</strong>
+                </div>
+                <div class="product__content-parameter">
+                  <p>38/30</p>
+                  <strong>HWY/CITY RATNG</strong>
+                </div>
+              </div>
+              <div class="product__content-button">
+                <a href="#" class="product__content-explore btn">EXPLORE</a>
+                <a href="#" class="product__content-build btn-border">BUILD</a>
+              </div>
+              <div class="product__content-bottom">
+                <a href="#" class="product__content-link"
+                  >EXPLORE THE ACCORD FAMILY <i class="fa fa-angle-right"></i
+                ></a>
+                <img src="./image/accord-family-vehicles-2x.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div
+            class="tab-pane fade show active"
+            id="pills-future"
+            role="tabpanel"
+            aria-labelledby="pills-future-tab"
+          >
+            <img src="./image/slider-5.jpg" alt="" />
+            <div class="container product__content">
+              <h3 class="product__content-heading">
+                <strong>CAR 5</strong>/12
+              </h3>
+              <img
+                src="./image/civic-logo.jpg"
+                alt=""
+                class="product__content-logo"
+              />
+              <span class="product__content-desc">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Exercitationem assumenda esse nisi maiores cum eius laborum,
+                quas optio velit praesentium nam, ipsum dolore a, totam quam
+                quasi consequatur. Placeat, iusto!
+              </span>
+              <div class="product__content-detail">
+                <div class="product__content-price">
+                  <p>$23,999</p>
+                  <strong>STARTING MSRP</strong>
+                </div>
+                <div class="product__content-parameter">
+                  <p>38/30</p>
+                  <strong>HWY/CITY RATNG</strong>
+                </div>
+              </div>
+              <div class="product__content-button">
+                <a href="#" class="product__content-explore btn">EXPLORE</a>
+                <a href="#" class="product__content-build btn-border">BUILD</a>
+              </div>
+              <div class="product__content-bottom">
+                <a href="#" class="product__content-link"
+                  >EXPLORE THE ACCORD FAMILY <i class="fa fa-angle-right"></i
+                ></a>
+                <img src="./image/accord-family-vehicles-2x.png" alt="" />
+              </div>
+            </div>
           </div>
         </div>
       </section>
