--- a/index.html
+++ b/index.html
@@ -423,6 +423,57 @@
           </div>
         </div>
       </section>
+
+      <section class="services">
+        <div class="container">
+          <div class="services__list">
+            <div class="services__item">
+              <div class="services__item-content">
+                <i class="fa fa-tools"></i>
+                <h3 class="services__item-heading">Build & Price</h3>
+                <span class="services__item-desc">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Magnam, vero!
+                </span>
+                <a href="#" class="services__item-button btn-border"> GO </a>
+              </div>
+            </div>
+            <div class="services__item">
+              <div class="services__item-content">
+                <i class="fa fa-tools"></i>
+                <h3 class="services__item-heading">Build & Price</h3>
+                <span class="services__item-desc">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Magnam, vero!
+                </span>
+                <a href="#" class="services__item-button btn-border"> GO </a>
+              </div>
+            </div>
+            <div class="services__item">
+              <div class="services__item-content">
+                <i class="fa fa-tools"></i>
+                <h3 class="services__item-heading">Build & Price</h3>
+                <span class="services__item-desc">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Magnam, vero!
+                </span>
+                <a href="#" class="services__item-button btn-border"> GO </a>
+              </div>
+            </div>
+            <div class="services__item">
+              <div class="services__item-content">
+                <i class="fa fa-tools"></i>
+                <h3 class="services__item-heading">Build & Price</h3>
+                <span class="services__item-desc">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Magnam, vero!
+                </span>
+                <a href="#" class="services__item-button btn-border"> GO </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script
