--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             </div>
           </div>
           <div
-            class="tab-pane fade show active"
+            class="tab-pane fade show"
             id="pills-crossover"
             role="tabpanel"
             aria-labelledby="pills-crossover-tab"
@@ -290,7 +290,7 @@
             </div>
           </div>
           <div
-            class="tab-pane fade show active"
+            class="tab-pane fade show"
             id="pills-minivan"
             role="tabpanel"
             aria-labelledby="pills-minivan-tab"
@@ -334,7 +334,7 @@
             </div>
           </div>
           <div
-            class="tab-pane fade show active"
+            class="tab-pane fade show"
             id="pills-environmental"
             role="tabpanel"
             aria-labelledby="pills-environmental-tab"
@@ -378,7 +378,7 @@
             </div>
           </div>
           <div
-            class="tab-pane fade show active"
+            class="tab-pane fade show"
             id="pills-future"
             role="tabpanel"
             aria-labelledby="pills-future-tab"
