--- a/index.html
+++ b/index.html
@@ -440,8 +440,8 @@
             </div>
             <div class="services__item">
               <div class="services__item-content">
-                <i class="fa fa-tools"></i>
-                <h3 class="services__item-heading">Build & Price</h3>
+                <i class="fa fa-car"></i>
+                <h3 class="services__item-heading">Compare Vehicles</h3>
                 <span class="services__item-desc">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Magnam, vero!
@@ -451,8 +451,8 @@
             </div>
             <div class="services__item">
               <div class="services__item-content">
-                <i class="fa fa-tools"></i>
-                <h3 class="services__item-heading">Build & Price</h3>
+                <i class="fa fa-search"></i>
+                <h3 class="services__item-heading">Search Inventory</h3>
                 <span class="services__item-desc">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Magnam, vero!
@@ -462,13 +462,46 @@
             </div>
             <div class="services__item">
               <div class="services__item-content">
-                <i class="fa fa-tools"></i>
-                <h3 class="services__item-heading">Build & Price</h3>
+                <i class="fa fa-tags"></i>
+                <h3 class="services__item-heading">Current Offers</h3>
                 <span class="services__item-desc">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Magnam, vero!
                 </span>
                 <a href="#" class="services__item-button btn-border"> GO </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="banner">
+        <div class="container">
+          <div class="banner__list">
+            <div class="banner__item banner__left">
+              <div class="banner__content">
+                <h3 class="banner__content-heading">
+                  Lorem ipsum dolor sit amet.
+                </h3>
+                <span class="banner__content-desc">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
+                  impedit ad fugiat repudiandae neque unde reprehenderit
+                  quisquam aperiam laborum iusto!
+                </span>
+                <a href="#" class="banner__content-button btn"> GO </a>
+              </div>
+            </div>
+            <div class="banner__item banner__right">
+              <div class="banner__content">
+                <h3 class="banner__content-heading">
+                  Lorem ipsum dolor sit amet.
+                </h3>
+                <span class="banner__content-desc">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
+                  impedit ad fugiat repudiandae neque unde reprehenderit
+                  quisquam aperiam laborum iusto!
+                </span>
+                <a href="#" class="banner__content-button btn"> GO </a>
               </div>
             </div>
           </div>
