--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                   impedit ad fugiat repudiandae neque unde reprehenderit
                   quisquam aperiam laborum iusto!
                 </span>
-                <a href="#" class="banner__content-button btn"> GO </a>
+                <a href="#" class="banner__content-button btn-border"> GO </a>
               </div>
             </div>
             <div class="banner__item banner__right">
@@ -501,7 +501,127 @@
                   impedit ad fugiat repudiandae neque unde reprehenderit
                   quisquam aperiam laborum iusto!
                 </span>
-                <a href="#" class="banner__content-button btn"> GO </a>
+                <a href="#" class="banner__content-button btn-border"> GO </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="blog">
+        <div class="container">
+          <h2 class="blog__heading">DISCOVER HONDA</h2>
+          <span class="blog__desc">
+            Explore the world of Honda through out latest news, events and
+            videos.
+          </span>
+          <div class="blog__list">
+            <div class="blog__item">
+              <div class="blog__content">
+                <div class="blog__image">
+                  <img src="./image/blog1.png" alt=" " />
+                </div>
+                <div class="blog__content-inner">
+                  <h3 class="blog__content-title">
+                    2017 KBB.com Most Awarded Brand
+                  </h3>
+                  <span class="blog__content-desc">
+                    With more than two dozen brand and individual awards, Kelly
+                    Blue Book's KBB.com has awarded Honda as the most awarded
+                    brand of 2017
+                  </span>
+                  <a href="#" class="blog__content-link"> LEARN MORE </a>
+                </div>
+              </div>
+            </div>
+            <div class="blog__item">
+              <div class="blog__content">
+                <div class="blog__image">
+                  <img src="./image/blog1.png" alt=" " />
+                </div>
+                <div class="blog__content-inner">
+                  <h3 class="blog__content-title">
+                    2017 KBB.com Most Awarded Brand
+                  </h3>
+                  <span class="blog__content-desc">
+                    With more than two dozen brand and individual awards, Kelly
+                    Blue Book's KBB.com has awarded Honda as the most awarded
+                    brand of 2017
+                  </span>
+                  <a href="#" class="blog__content-link"> LEARN MORE </a>
+                </div>
+              </div>
+            </div>
+            <div class="blog__item">
+              <div class="blog__content">
+                <div class="blog__image">
+                  <img src="./image/blog1.png" alt=" " />
+                </div>
+                <div class="blog__content-inner">
+                  <h3 class="blog__content-title">
+                    2017 KBB.com Most Awarded Brand
+                  </h3>
+                  <span class="blog__content-desc">
+                    With more than two dozen brand and individual awards, Kelly
+                    Blue Book's KBB.com has awarded Honda as the most awarded
+                    brand of 2017
+                  </span>
+                  <a href="#" class="blog__content-link"> LEARN MORE </a>
+                </div>
+              </div>
+            </div>
+            <div class="blog__item">
+              <div class="blog__content">
+                <div class="blog__image">
+                  <img src="./image/blog1.png" alt=" " />
+                </div>
+                <div class="blog__content-inner">
+                  <h3 class="blog__content-title">
+                    2017 KBB.com Most Awarded Brand
+                  </h3>
+                  <span class="blog__content-desc">
+                    With more than two dozen brand and individual awards, Kelly
+                    Blue Book's KBB.com has awarded Honda as the most awarded
+                    brand of 2017
+                  </span>
+                  <a href="#" class="blog__content-link"> LEARN MORE </a>
+                </div>
+              </div>
+            </div>
+            <div class="blog__item">
+              <div class="blog__content">
+                <div class="blog__image">
+                  <img src="./image/blog1.png" alt=" " />
+                </div>
+                <div class="blog__content-inner">
+                  <h3 class="blog__content-title">
+                    2017 KBB.com Most Awarded Brand
+                  </h3>
+                  <span class="blog__content-desc">
+                    With more than two dozen brand and individual awards, Kelly
+                    Blue Book's KBB.com has awarded Honda as the most awarded
+                    brand of 2017
+                  </span>
+                  <a href="#" class="blog__content-link"> LEARN MORE </a>
+                </div>
+              </div>
+            </div>
+            <div class="blog__item">
+              <div class="blog__content">
+                <div class="blog__image">
+                  <img src="./image/blog1.png" alt=" " />
+                </div>
+                <div class="blog__content-inner">
+                  <h3 class="blog__content-title">
+                    2017 KBB.com Most Awarded Brand
+                  </h3>
+                  <span class="blog__content-desc">
+                    With more than two dozen brand and individual awards, Kelly
+                    Blue Book's KBB.com has awarded Honda as the most awarded
+                    brand of 2017
+                  </span>
+                  <a href="#" class="blog__content-link"> LEARN MORE </a>
+                </div>
               </div>
             </div>
           </div>
